Fixed location of sample message, and fixed copy/pasted readme

--- a/JSONSchemas/QuickLearn.Finance/QuickLearn.Finance.Messaging.Test/QuickLearn.Finance.Messaging.Test.csproj
+++ b/JSONSchemas/QuickLearn.Finance/QuickLearn.Finance.Messaging.Test/QuickLearn.Finance.Messaging.Test.csproj
@@ -74,10 +74,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\..\..\..\..\Desktop\sample.json">
-      <Link>Messages\sample.json</Link>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
+    <None Include="Messages\sample.json" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
