This is why we test before blindly committing. Ensured sample message will be copied on build, and updated default test settings

--- a/JSONSchemas/QuickLearn.Finance/QuickLearn.Finance.Messaging.Test/QuickLearn.Finance.Messaging.Test.csproj
+++ b/JSONSchemas/QuickLearn.Finance/QuickLearn.Finance.Messaging.Test/QuickLearn.Finance.Messaging.Test.csproj
@@ -74,7 +74,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Messages\sample.json" />
+    <None Include="Messages\sample.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
